--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -7,6 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jewel Design Tool</title>
   <style>
+
+#bead-count {
+  width: 60px;
+  padding: 5px 8px;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  font-size: 14px;
+  text-align: center;
+  outline: none;
+  background-color: #fff;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
+  transition: border-color 0.2s, box-shadow 0.2s;
+}
+
+#bead-count:focus {
+  border-color: #999;
+  box-shadow: 0 0 4px rgba(100, 100, 100, 0.2);
+}
+    .control-panel {
+  padding: 10px;
+  background: #fafafa;
+  border-radius: 8px;
+  margin-bottom: 12px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+}
+
+.bead-library-panel {
+  padding: 20px;
+  background: white;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  margin-bottom: 12px;
+}
     #night-background {
       position: fixed;
       top: 0;
@@ -545,12 +578,13 @@
 
   <div id="zoom-wrapper" style="
           display: flex;
-          align-items: center;
+          align-items: flex-start;
           gap: 20px;
           transform: scale(1);
           transform-origin: top center;
         ">
     <div class="bead-library" style="background-color: #e0e0e5" >
+      <section class="control-panel">
       <button onclick="clearDesignArea()" style="margin-bottom: 10px">
         Clean Tray
       </button>
@@ -561,9 +595,10 @@
         <input type="number" id="bead-count" value="18" min="1" max="50" />
         <button onclick="updateBeadCount()">Set Bead Count & Start</button>
       </div>
-      <h3>Bead Library</h3>
+    </section>
+    <section class="bead-library-panel">
       <div id="library"></div>
-
+    </section>
       <div id="toast-message" style="
               position: fixed;
               bottom: 30px;
@@ -580,7 +615,7 @@
             ">
         Message
       </div>
-
+      <section class="library-footer">
       <div style="
               margin-top: 10px;
               padding: 10px;
@@ -594,13 +629,15 @@
           tray to remove it.
         </p>
       </div>
+  </section>
+
     </div>
     <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)"><img
         id="tray-image" src="jadetray.png" /></div>
     <div id="music-wrapper" onclick="toggleMusic()" style="
             position: fixed;
             right: 16px;
-            top: 250px;
+            top: 400px;
             width: 80px;
             height: 100px;
             cursor: pointer;
@@ -1171,8 +1208,8 @@
 
     function addToDesignArea(styleObj, size, shape, imageURL = "") {
       let designArea = document.getElementById("design-area");
-      let centerX = designArea.clientWidth / 2 - 5;
-      let centerY = designArea.clientHeight / 2 - 12;
+      let centerX = designArea.clientWidth / 2 - 2;
+      let centerY = designArea.clientHeight / 2 - 6;
       let radius = 114;
       let beadWidth = size === "small" ? 30 : 50;
       let beadHeight = beadWidth;
