--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -7,39 +7,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jewel Design Tool</title>
   <style>
+    #bead-count {
+      width: 60px;
+      padding: 5px 8px;
+      border: 1px solid #bbb;
+      border-radius: 6px;
+      font-size: 14px;
+      text-align: center;
+      outline: none;
+      background-color: #fff;
+      box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
+      transition: border-color 0.2s, box-shadow 0.2s;
+    }
 
-#bead-count {
-  width: 60px;
-  padding: 5px 8px;
-  border: 1px solid #bbb;
-  border-radius: 6px;
-  font-size: 14px;
-  text-align: center;
-  outline: none;
-  background-color: #fff;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: border-color 0.2s, box-shadow 0.2s;
-}
+    #bead-count:focus {
+      border-color: #999;
+      box-shadow: 0 0 4px rgba(100, 100, 100, 0.2);
+    }
 
-#bead-count:focus {
-  border-color: #999;
-  box-shadow: 0 0 4px rgba(100, 100, 100, 0.2);
-}
     .control-panel {
-  padding: 10px;
-  background: #fafafa;
-  border-radius: 8px;
-  margin-bottom: 12px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-}
+      padding: 10px;
+      background: #fafafa;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    }
 
-.bead-library-panel {
-  padding: 20px;
-  background: white;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  margin-bottom: 12px;
-}
+    .bead-library-panel {
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      margin-bottom: 12px;
+    }
+
     #night-background {
       position: fixed;
       top: 0;
@@ -73,11 +74,11 @@
     }
 
     .toggle-container {
-  position: fixed;
-  top: 20px;
-  left: 30%;
-  z-index: 1001;
-}
+      position: fixed;
+      top: 20px;
+      left: 30%;
+      z-index: 1001;
+    }
 
     #price-display.night {
       background: #222;
@@ -300,38 +301,38 @@
     }
 
     #price-toggle-handle {
-  position: absolute;
-  left: -24px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 60px;
-  background: white;
-  border-radius: 8px 0 0 8px;
-  box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 999;
-}
+      position: absolute;
+      left: -24px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 30px;
+      height: 60px;
+      background: white;
+      border-radius: 8px 0 0 8px;
+      box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 999;
+    }
 
-#price-panel-wrapper.night #price-toggle-handle {
-  background: #222;
-  color: #eee;
-  box-shadow: 2px 0 8px rgba(255, 255, 255, 0.05);
-}
+    #price-panel-wrapper.night #price-toggle-handle {
+      background: #222;
+      color: #eee;
+      box-shadow: 2px 0 8px rgba(255, 255, 255, 0.05);
+    }
 
-#price-toggle-handle:hover {
-  background: #f0f0f0;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
+    #price-toggle-handle:hover {
+      background: #f0f0f0;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
 
-#price-arrow-icon {
-  font-size: 16px;
-  color: #444;
-  transition: transform 0.3s ease;
-}
+    #price-arrow-icon {
+      font-size: 16px;
+      color: #444;
+      transition: transform 0.3s ease;
+    }
 
     #tray-image {
       position: absolute;
@@ -583,22 +584,22 @@
           transform: scale(1);
           transform-origin: top center;
         ">
-    <div class="bead-library" style="background-color: #e0e0e5" >
+    <div class="bead-library" style="background-color: #e0e0e5">
       <section class="control-panel">
-      <button onclick="clearDesignArea()" style="margin-bottom: 10px">
-        Clean Tray
-      </button>
-      <button onclick="toggleBackground()" style="margin-bottom: 10px">
-        Change Bead Tray
-      </button>
-      <div style="margin-top: 10px">
-        <input type="number" id="bead-count" value="18" min="1" max="50" />
-        <button onclick="updateBeadCount()">Set Bead Count & Start</button>
-      </div>
-    </section>
-    <section class="bead-library-panel">
-      <div id="library"></div>
-    </section>
+        <button onclick="clearDesignArea()" style="margin-bottom: 10px">
+          Clean Tray
+        </button>
+        <button onclick="toggleBackground()" style="margin-bottom: 10px">
+          Change Bead Tray
+        </button>
+        <div style="margin-top: 10px">
+          <input type="number" id="bead-count" value="18" min="1" max="50" />
+          <button onclick="updateBeadCount()">Set Bead Count & Start</button>
+        </div>
+      </section>
+      <section class="bead-library-panel">
+        <div id="library"></div>
+      </section>
       <div id="toast-message" style="
               position: fixed;
               bottom: 30px;
@@ -616,20 +617,23 @@
         Message
       </div>
       <section class="library-footer">
-      <div style="
-              margin-top: 10px;
-              padding: 10px;
-              border-top: 1px solid #ccc;
-              font-size: 12px;
-              color: #555;
+        <div style="
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  padding: 14px 16px;
+  font-size: 13px;
+  color: #444;
+  line-height: 1.5;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.03);
             ">
-        <p>Please use a larger screen for the best experience.</p>
-        <p>
-          Click a bead to add it to the tray. Double-click a bead on the
-          tray to remove it.
-        </p>
-      </div>
-  </section>
+<p><strong>How to Use:</strong></p>
+<ul>
+  <li>Click a bead to add it to the tray.</li>
+  <li>Double-click a bead to remove it.</li>
+</ul>
+        </div>
+      </section>
 
     </div>
     <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)"><img
@@ -1035,12 +1039,12 @@
       isPriceVisible = !isPriceVisible;
 
       if (isPriceVisible) {
-  wrapper.style.transform = "translateX(0)";
-  arrowIcon.className = "fa-solid fa-chevron-right";
-} else {
-  wrapper.style.transform = "translateX(85%)";
-  arrowIcon.className = "fa-solid fa-chevron-left";
-}
+        wrapper.style.transform = "translateX(0)";
+        arrowIcon.className = "fa-solid fa-chevron-right";
+      } else {
+        wrapper.style.transform = "translateX(85%)";
+        arrowIcon.className = "fa-solid fa-chevron-left";
+      }
     }
 
     function showToast(msg) {
